--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -90,6 +90,28 @@ h3 {
   font-style: italic;
 }
 
+.delete-button {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  background-color: rgb(114, 114, 114);
+  color: white;
+  font-weight: 600;
+  margin: 0 auto;
+  font-size: 20px;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.delete-link{
+  text-decoration: none;
+}
+
 .game-bg {
   width: 200px;
   height: 175px;
@@ -102,7 +124,7 @@ h3 {
   background-color: rgb(182, 177, 177);
   width: 200px;
   height: 175px;
-  border-radius: 40px
+  border-radius: 40px;
 }
 
 #add-to-favorites{
