--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -9,6 +9,9 @@ body {
 
 .navbar {
   display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   background-color: var(--soft-orange);
