add initial responsive styling to nav & games index

--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -143,6 +143,6 @@ h3 {
   height: 150px;
   border: 2px solid white;
   box-shadow: 0 0 5px orange;
-  margin-top: 5vh;
+  margin-top: 100px;
   border-radius: 2px;
 }
