--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/games/index.css">
 <%- include('../partials/nav') %>
 
-<main>
+<main class="content-push">
   <h1><%= title %></h1>
   
   <section class="card-container">
