--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/games/new.css">
 <%- include('../partials/nav') %>
 
-<main>
+<main class="content-push">
   <h1>Add Game</h1>
   <section>
     <% if (user) { %>
