--- a/views/games/reviews.ejs
+++ b/views/games/reviews.ejs
@@ -2,7 +2,7 @@
 <%- include('../partials/nav') %>
 <link rel="stylesheet" href="/stylesheets/reviews/new.css">
 
-<main>
+<main class="content-push">
 	<h1>Add Review</h1>
   <h2><%= game.name %> </h2>
 
