--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -5,7 +5,7 @@
 >
 <%- include('../partials/nav') %>
 
-<main>
+<main class="content-push">
   <h1><%= title %></h1>
 
   <div class="card-container">
