--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/profiles/show.css">
 <%- include('../partials/nav') %>
 
-<main>
+<main class="content-push">
   <% if (profile.avatar) { %>
     <div id="img-background">
       <img id="profile-image"
