--- a/public/stylesheets/games/index.css
+++ b/public/stylesheets/games/index.css
@@ -1,5 +1,6 @@
 section {
   width: 75vw;
+  margin-top: -25px;
 }
 
 h2 {
@@ -46,7 +47,7 @@ h2 {
   width: 200px;
   height: 300px;
   background-color: var(--log-in-hover-bg-color);
-  margin: 50px;
+  margin: 30px;
   border-radius: 40px;
   box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
   transition: 0.2s;
@@ -57,7 +58,7 @@ h2 {
   width: 200px;
   height: 300px;
   background-color: var(--log-in-bg-color);
-  margin: 50px;
+  margin: 30px;
   border-radius: 40px;
   border: 2px solid white;
   box-shadow: 0 0 5px orange;
@@ -92,59 +93,6 @@ h2 {
   border-radius: 40px
 }
 
-#heading {
-  margin: 80px 0 30px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#fox-heading {
-  height: 10rem;
-  width: 10rem;
-  margin-left: 20px;
-}
-
-#intro-body{
-  font-size: 1.5rem;
-}
-
-#log-in {
-  height: 5vh;
-  width: 10vw;
-  margin-top: 5px;
-  font-family: "Fredoka", sans-serif;
-  font-size: 2rem;
-  background-color: var(--log-in-bg-color);
-  color: var(--log-in-color);
-  border-radius: 3px;
-  font-weight: 800;
-}
-
-#log-in:hover {
-  background-color: var(--log-in-hover-bg-color);
-  color: var(--log-in-hover-color);
-  cursor: pointer;
-}
-
-#log-out {
-  height: 5vh;
-  width: 10vw;
-  margin-top: 5px;
-  font-family: "Fredoka", sans-serif;
-  font-size: 2rem;
-  background-color: var(--log-out-bg-color);
-  color: var(--log-out-color);
-  border-radius: 3px;
-  font-weight: 800;
-}
-
-#log-out:hover {
-  background-color: var(--log-out-hover-bg-color);
-  color: var(--log-out-hover-color);
-  cursor: pointer;
-}
-
 @media only screen and (max-width: 768px){
   h1 {
     font-size: 5rem;
@@ -153,42 +101,91 @@ h2 {
   section {
     width: 80vw;
     height: 67.5vh;
-    background-color: var(--section-bg-color);
-    border: 2px solid black;
-    text-align: center;
-    padding: 0 20px 10px 20px;
   }
 
   h2 {
     font-size: 2rem;
   }
 
-  #heading {
-    margin: 35px 0 15px 0;
+  .btn-base{
     display: flex;
+    width: 90px;
+    height: auto;
+    min-height: 25px;
+    border-radius: 50px;
+    background-color: rgb(114, 114, 114);
+    color: white;
+    font-weight: 600;
+    font-style: italic;
+    margin: 0 auto;
+    margin-top: -50px;
+    font-size: 10px;
+    position: relative;
     justify-content: center;
     align-items: center;
+    z-index: 2;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.2);
   }
   
-  #fox-heading {
-    height: 5rem;
-    width: 5rem;
-    margin-left: 10px;
+  .btn-link{
+    text-decoration: none;
   }
-
-  #intro-body{
-    font-size: 1.1rem;
+  
+  .card-container{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
   }
-
-  #log-in {
-    height: 5vh;
-    width: 20vw;
-    font-size: 1.5rem;
+  
+  .card-container:hover .card-base{
+    filter: blur(1px);
+    transform: scale(0.9);
+    opacity: 0.9;
   }
-
-  #log-out {
-    height: 5vh;
-    width: 20vw;
-    font-size: 1.5rem;
+  
+  .card-base {
+    width: 125px;
+    height: 125px;
+    background-color: var(--log-in-hover-bg-color);
+    margin: 20px;
+    border-radius: 30px;
+    box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
+    transition: 0.2s;
+    overflow: hidden;
+  }
+  
+  .card-container .card-base:hover {
+    width: 125px;
+    height: 125px;
+    background-color: var(--log-in-bg-color);
+    margin: 20px;
+    border-radius: 30px;
+    border: 2px solid white;
+    box-shadow: 0 0 5px orange;
+    filter: blur(0px);
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  
+  .content{
+    width: 0;
+    height: 0;
+  }
+  
+  .game-bg {
+    width: 125px;
+    height: 125px;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+  }
+  
+  .game-bg-noImg{
+    background-color: rgb(182, 177, 177);
+    width: 100px;
+    height: 100px;
+    border-radius: 40px
   }
 }
