--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -18,7 +18,6 @@ body {
   color: var(--soft-white);
   font-weight: 500;
   border: 3px outset grey;
-  height: 60px;
 }
 
 .fox-nav {
@@ -65,12 +64,12 @@ body {
   display: none;
   flex-direction: column;
   justify-content: space-between;
-  width: 30px;
-  height: 21px;
+  width: 35px;
+  height: 30px;
 }
 
 .toggle-button .bar {
-  height: 3px;
+  height: 5px;
   width: 100%;
   background-color: white;
   border-radius: 10px;
@@ -89,12 +88,13 @@ body {
   cursor: pointer;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .toggle-button {
     display: flex;
-    margin-top: .5rem;
+    margin-top: 10px;
     padding: 2px;
-    border: 1px solid rgb(0, 0, 0);
+    border: 2px solid black;
+    background-color: var(--soft-orange);
   }
 
   .toggle-button:hover {
@@ -102,6 +102,9 @@ body {
     cursor: pointer;
   }
 
+  .content-push.active {
+    margin-top: 210px;
+  }
 
   .navbar-links {
     display: none;
@@ -132,5 +135,6 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-color: var(--soft-orange);
   }
 }
