--- a/views/games/editReview.ejs
+++ b/views/games/editReview.ejs
@@ -2,7 +2,7 @@
 <%- include('../partials/nav') %>
 <link rel="stylesheet" href="/stylesheets/reviews/new.css">
 
-<main>
+<main class="content-push">
 	<h1>Edit Review</h1>
   <h2><%= game.name %></h2>
 
@@ -31,4 +31,6 @@
     </form>
   <% } %>
   
+</main>
+
 <%- include('../partials/footer') %>
