--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <%- include('./partials/nav') %>
 <link rel="stylesheet" href="/stylesheets/index.css">
 
-<main>
+<main class="content-push">
   <div id="heading">
     <h1>Foxy</h1>
     <img id="fox-heading" src="/images/logo/FoxIcon.png" alt="Fox">
