--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -65,13 +65,10 @@ h2 {
 }
 
 @media only screen and (max-width: 768px){
-  h1 {
-    font-size: 5rem;
-  }
-
   section {
     width: 80vw;
-    height: 67.5vh;
+    height: 400px;
+    margin-top: -10px;
     background-color: var(--section-bg-color);
     border: 2px solid black;
     text-align: center;
@@ -83,31 +80,30 @@ h2 {
   }
 
   #heading {
-    margin: 35px 0 15px 0;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
   #fox-heading {
-    height: 5rem;
-    width: 5rem;
+    height: 100px;
     margin-left: 10px;
+    margin-top: 70px;
   }
 
   #intro-body{
-    font-size: 1.1rem;
+    font-size: 11px;
   }
 
   #log-in {
-    height: 5vh;
-    width: 20vw;
-    font-size: 1.5rem;
+    height: 40px;
+    width: 80px;
+    font-size: 16px;
   }
 
   #log-out {
-    height: 5vh;
-    width: 20vw;
-    font-size: 1.5rem;
+    height: 40px;
+    width: 80px;
+    font-size: 16px;
   }
 }
