--- a/public/stylesheets/profiles/index.css
+++ b/public/stylesheets/profiles/index.css
@@ -76,10 +76,6 @@ h2 {
 }
 
 @media only screen and (max-width: 768px){
-  h1 {
-    font-size: 5rem;
-  }
-
   section {
     width: 80vw;
     height: 67.5vh;
@@ -89,7 +85,49 @@ h2 {
     padding: 0 20px 10px 20px;
   }
 
-  h2 {
-    font-size: 2rem;
+  .card-container{
+    margin-top: -30px;
+  }
+
+  .card-base {
+    width: 120px;
+    height: 170px;
+    background-color: var(--log-in-hover-bg-color);
+    margin: 20px;
+    border-radius: 2px;
+    box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
+    transition: 0.1s;
+    overflow: hidden;
+  }
+  
+  .card-container .card-base:hover {
+    width: 120px;
+    height: 170px;
+    border-radius: 2px;
+    background-color: var(--log-in-bg-color);
+    margin: 20px;
+    border: 2px solid white;
+    box-shadow: 0 0 5px orange;
+    transform: scale(1.1);
+  }
+
+  .content{
+    width: 120px;
+    height: 50px;
+    border-radius: 2px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    font-weight: 600;
+    color:black;
+  }
+  
+  .game-bg {
+    width: 120px;
+    height: 120px;
+    border-radius: 2px;
+    position: relative;
+    z-index: 1;
   }
 }
