--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,8 +1,9 @@
 <%- include('../partials/html-head') %>
-<%- include('../partials/nav') %>
 <link rel="stylesheet" href="/stylesheets/games/show.css">
+<%- include('../partials/nav') %>
 
 <main class="content-push">
+
   <section id="user-options">
     <% if (game.addedBy.equals(user?.profile._id)) { %>
       <form action="/games/<%= game._id %>/edit" method="GET">
@@ -13,8 +14,8 @@
       </form>
     <% } %>
     <% if (user) { %>
-      <button>
-        <a href="/games/<%= game._id %>/reviews">
+      <button class="btn">
+        <a id="add-review-btn" href="/games/<%= game._id %>/reviews">
           Add Review
         </a>
       </button>
@@ -23,42 +24,38 @@
 
   <section id="details-section">
     <h2>Added by <%= game.addedBy.name %></h2>
-    <div>Name: </div>
-      <div><%= game.name %></div>
-      <div>Genre: </div>
-      <div><%= game.genre %></div>
-      <div>ESRB Rating: </div>
-      <div><%= game.esrbRating %></div>
-      <div>Release Year: </div>
-      <div><%= game.releaseYear %></div>
+    <div>Name: <%= game.name %></div>
+      <div>Genre: <%= game.genre %></div>
+      <div>ESRB Rating: <%= game.esrbRating %></div>
+      <div>Release Year: <%= game.releaseYear %></div>
   </section>
 
   <section id="reviews-section">
       <% if (game.reviews.length) { %>
-            <% let total = 0 %> 
+            <% let total = 0 %>
+            <h3>All Reviews</h3>
             <% game.reviews.forEach(review => { %>
               <% total += review.rating %> 
-              <div><%= review.content %></div>
-              <div><%= review.addedBy.name %> - <%= review.rating %>/10
+              <div id="">
+                <div><p id="review-body"><%= review.content %></p></div>
+                <div><%= review.addedBy.name %> - <%= review.rating %>/10
                 <br>
                 <%= review.createdAt.toLocaleDateString() %></div>
                 <br>
-
+              </div>
+                
                 <% if (review.addedBy.equals(user?.profile._id)) { %>
-                  <!-- <form action="/games/<#%= game._id %>/reviews/<#%= review._id %>/edit" method="GET">
-                    <button type="submit">Edit Review</button>
-                  </form> -->
                   <form action="/games/<%= game._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                     <button type="submit">Delete Review</button>
                   </form>
                 <% } %>
-                
+                  
             <% }) %>
-                <strong><%= (total / game.reviews.length).toFixed(1) %></strong>
+                  <strong id="avgReview">Average Review Score: <%= (total / game.reviews.length).toFixed(1) %></strong>
       <% } else { %>
         <h3>No Reviews Yet</h3>
       <% } %> 
   </section>
-</main>
 
+</main>
 <%- include('../partials/footer') %>
