--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -1,8 +1,5 @@
 <%- include('../partials/html-head') %>
-<link 
-  href="/stylesheets/profiles/index.css" 
-  rel="stylesheet" 
->
+<link href="/stylesheets/profiles/index.css" rel="stylesheet">
 <%- include('../partials/nav') %>
 
 <main class="content-push">
@@ -32,6 +29,6 @@
       </div>
     <% }) %>
   </div>
-</main>
 
+</main>
 <%- include('../partials/footer') %>
