--- a/public/stylesheets/games/show.css
+++ b/public/stylesheets/games/show.css
@@ -1,23 +1,68 @@
 h2 {
-  font-size: 4rem;
+  font-size: 20px;
 }
 
 div {
   font-size: 2rem;
 }
 
+.btn {
+  height: 60px;
+  width: 150px;
+  margin-top: 10px;
+  font-family: "Fredoka", sans-serif;
+  font-size: 22px;
+  background-color: var(--log-in-bg-color);
+  color: var(--log-in-color);
+  border-radius: 3px;
+  font-weight: 800;
+}
+
+.btn:hover {
+  background-color: var(--log-in-hover-bg-color);
+  color: var(--log-in-hover-color);
+  cursor: pointer;
+}
+
+#add-review-btn {
+  text-decoration: none;
+}
+
+#add-review-btn:visited {
+  color:var(--log-in-color)
+}
+
+
 #details-section {
-  height: 300px;
+  height: auto;
+  width: 600px;
+  text-align: center;
+  padding: 0 100px;
+  border: 2px solid black;
+}
+
+#review-body {
+  flex-wrap: wrap;
+  word-wrap: break-word;
+}
+
+#reviews-section {
+  height: auto;
+  width: 800px;
+  padding: 10px 100px 50px 100px;
+  background-color: var(--soft-white);
+  border: 2px solid black;
+  text-align: center;
 }
 
 #user-options {
-  width: 300px;
-  height: 100px;
+  display: flex;
+  width: 600px;
   margin-top: 100px;
-  background-color: var(--section-bg-color);
+  background-color: var(--soft-white);
   border: 2px solid black;
   text-align: center;
-  padding: 0 20px 10px 20px;
+  padding: 10px 20px 10px 20px;
 }
 
 @media only screen and (max-width: 768px){
@@ -28,7 +73,7 @@ div {
   section {
     width: 400px;
     margin-top: 10px;
-    background-color: var(--section-bg-color);
+    background-color: var(--soft-white);
     border: 2px solid black;
     text-align: center;
     padding: 0 20px 10px 20px;
