--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -1,28 +1,34 @@
 <%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/games/edit.css">
 <%- include('../partials/nav') %>
-<link rel="stylesheet" href="/stylesheets/games/show.css">
 
 <section class="content-push">
   <h1>Edit <%= game.name %></h1>
-  <% if (user) { %>
+  <% if (user && game.addedBy.equals(user?.profile._id)) { %>
     <form action="/games/<%= game._id %>?_method=PUT" method="POST">
       <label>Name:
         <input type="text" name="name" value="<%= game.name %>" autocomplete="off">
-      </label><br>
+      </label><br><br>
       <label>Genre:
         <input type="text" name="genre" value="<%= game.genre %>" autocomplete="off">
-      </label><br>
+      </label><br><br>
       <label>ESRB Rating:
-        <input type="text" name="esrbRating" value="<%= game.esrbRating %>" autocomplete="off">
-      </label><br>
+        <select id="esrbSelect" name="esrbRating">
+          <option value="E">E</option>
+          <option value="E10">E10</option>
+          <option value="T">T</option>
+          <option value="M">M</option>
+          <option value="AO">AO</option>
+          <option value="RP">RP</option>
+        </select>
+      </label><br><br>
       <label>Release Year:
         <input type="text" name="releaseYear" value="<%= game.releaseYear %>" autocomplete="off">
-      </label><br>
-      <label>Cover Image:
+      </label><br><br>
+      <label>Cover Image (.jpg/.png):
         <input type="text" name="coverImage" value="<%= game.coverImage %>" autocomplete="off">
-      </label><br>
-      <button type="submit">Submit
-      </button>
+      </label><br><br>
+      <button type="submit" id="add-game">Add Game</button>
     </form>
   <% } %>
 </section>
