--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -8,21 +8,28 @@
     <% if (user) { %>
       <form action="/games" method="POST">
         <label>Name:
-          <input type="text" name="name" autocomplete="off">
-        </label><br>
+          <input type="text" name="name" placeholder="Game Title" autocomplete="off">
+        </label><br><br>
         <label>Genre:
-          <input type="text" name="genre" autocomplete="off">
-        </label><br>
+          <input type="text" name="genre" placeholder="ex. Action, Sports, etc." autocomplete="off">
+        </label><br><br>
         <label>ESRB Rating:
-          <input type="text" name="esrbRating" autocomplete="off">
-        </label><br>
+          <select id="esrbSelect" name="esrbRating">
+            <option value="E" selected="selected">E</option>
+            <option value="E10">E10</option>
+            <option value="T">T</option>
+            <option value="M">M</option>
+            <option value="AO">AO</option>
+            <option value="RP">RP</option>
+          </select>
+        </label><br><br>
         <label>Release Year:
-          <input type="text" name="releaseYear" autocomplete="off">
-        </label><br>
-        <label>Cover Image:
-          <input type="text" name="coverImage" autocomplete="off">
-        </label><br>
-        <button type="submit">Add Game</button>
+          <input type="text" name="releaseYear" placeholder="1958 to 2022" autocomplete="off">
+        </label><br><br>
+        <label>Cover Image (.jpg/.png):
+          <input type="text" name="coverImage" placeholder="ex. https://ign.com/game.jpg" autocomplete="off">
+        </label><br><br>
+        <button type="submit" id="add-game">Add Game</button>
       </form>
     <% } %>
   </section>
