--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -229,7 +229,12 @@ section {
     font-size: 12px;
     width: 20px;
     height: 20px;
-    background-color: rgb(114, 114, 114);
+  }
+
+  .delete-btn-hidden{
+    font-size: 12px;
+    width: 20px;
+    height: 20px;
   }
   
   .game-bg {
