--- a/public/stylesheets/profiles/index.css
+++ b/public/stylesheets/profiles/index.css
@@ -2,33 +2,16 @@ h2 {
   font-size: 4rem;
 }
 
-.btn-base{
-  display: flex;
-  width: 100px;
-  height: 50px;
-  border-radius: 50px;
-  background-color: rgb(114, 114, 114);
-  color: white;
-  font-weight: 600;
-  margin: 0 auto;
-  margin-top: -25px;
-  font-size: 1.5rem;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-  cursor: pointer;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.btn-link{
-  text-decoration: none;
+section {
+  width: 75vw;
+  height: auto;
 }
 
 .card-container {
   display: flex;
   justify-content: center;
   text-align: center;
+  margin-top: -20px;
 }
 
 .card-base {
@@ -75,58 +58,78 @@ h2 {
   text-decoration: none;
 }
 
+
 @media only screen and (max-width: 768px){
   section {
-    width: 80vw;
-    height: 67.5vh;
-    background-color: var(--section-bg-color);
-    border: 2px solid black;
-    text-align: center;
-    padding: 0 20px 10px 20px;
+    width: 90vw;
   }
 
+  h2 {
+    font-size: 2rem;
+  }
+  
   .card-container{
-    margin-top: -30px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
   }
-
+  
+  .card-container:hover .card-base{
+    filter: blur(1px);
+    transform: scale(0.9);
+    opacity: 0.9;
+  }
+  
   .card-base {
-    width: 120px;
-    height: 170px;
+    width: 125px;
+    height: 125px;
     background-color: var(--log-in-hover-bg-color);
-    margin: 20px;
-    border-radius: 2px;
+    margin: 10px;
+    border-radius: 30px;
     box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
-    transition: 0.1s;
+    transition: 0.2s;
     overflow: hidden;
   }
   
   .card-container .card-base:hover {
-    width: 120px;
-    height: 170px;
-    border-radius: 2px;
+    width: 125px;
+    height: 125px;
     background-color: var(--log-in-bg-color);
-    margin: 20px;
+    margin: 10px;
+    border-radius: 30px;
     border: 2px solid white;
     box-shadow: 0 0 5px orange;
-    transform: scale(1.1);
+    filter: blur(0px);
+    transform: scale(1.2);
+    opacity: 1;
   }
-
+  
   .content{
-    width: 120px;
-    height: 50px;
-    border-radius: 2px;
-    position: relative;
     display: flex;
-    justify-content: center;
-    font-size: 14px;
+    width: 90px;
+    height: auto;
+    min-height: 25px;
+    border-radius: 50px;
+    background-color: rgb(228, 164, 46);
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     font-weight: 600;
-    color:black;
+    margin: 0 auto;
+    margin-top: -40px;
+    font-size: 10px;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.2);
   }
   
   .game-bg {
-    width: 120px;
-    height: 120px;
-    border-radius: 2px;
+    width: 125px;
+    height: 125px;
+    border-radius: 20px;
     position: relative;
     z-index: 1;
   }
