--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -186,7 +186,7 @@ section {
 
 @media only screen and (max-width: 768px){
   section {
-    width: 80vw;
+    width: auto;
     height: auto;
   }
 
