--- a/public/stylesheets/games/show.css
+++ b/public/stylesheets/games/show.css
@@ -7,9 +7,9 @@ div {
 }
 
 .btn {
-  height: 60px;
+  height: 50px;
   width: 150px;
-  margin-top: 10px;
+  margin: 0 10px;
   font-family: "Fredoka", sans-serif;
   font-size: 22px;
   background-color: var(--log-in-bg-color);
@@ -25,20 +25,33 @@ div {
 }
 
 #add-review-btn {
+  color: var(--log-in-color);
   text-decoration: none;
 }
 
 #add-review-btn:visited {
-  color:var(--log-in-color)
+  color: var(--log-in-color)
 }
 
+#avg-review {
+  margin-bottom: -10px;
+}
+
+#delete-review {
+  height: auto;
+  width: auto;
+  font-size: 14px;
+}
 
 #details-section {
   height: auto;
-  width: 600px;
+  width: auto;
   text-align: center;
+  margin: 10px 30px;
   padding: 0 100px;
+  padding-bottom: 15px;
   border: 2px solid black;
+  background-color: var(--soft-white);
 }
 
 #review-body {
@@ -48,8 +61,10 @@ div {
 
 #reviews-section {
   height: auto;
-  width: 800px;
-  padding: 10px 100px 50px 100px;
+  width: auto;
+  max-width: 750px;
+  padding: 0 100px 25px 100px;
+  margin-bottom: 50px;
   background-color: var(--soft-white);
   border: 2px solid black;
   text-align: center;
@@ -57,33 +72,50 @@ div {
 
 #user-options {
   display: flex;
-  width: 600px;
-  margin-top: 100px;
-  background-color: var(--soft-white);
-  border: 2px solid black;
+  justify-content: center;
   text-align: center;
   padding: 10px 20px 10px 20px;
 }
 
 @media only screen and (max-width: 768px){
   h1 {
-    font-size: 5rem;
-  }
-
-  section {
-    width: 400px;
-    margin-top: 10px;
-    background-color: var(--soft-white);
-    border: 2px solid black;
-    text-align: center;
-    padding: 0 20px 10px 20px;
+    font-size: 70px;
   }
 
   h2 {
-    font-size: 2rem;
+    font-size: 20px;
+  }
+
+  .btn {
+    height: 50px;
+    width: 100px;
+    font-size: 15px;
+    margin-top: -10px;
+  }
+
+  #delete-review {
+    font-size: 10px;
+    margin: 0;
   }
 
   #details-section {
-    height: 300px;
+    padding: 0 50px;
+    padding-bottom: 15px;
+  }
+
+  #reviews-section {
+    max-width: 315px;
+    padding: 0 50px 25px 50px;
+    margin-bottom: 50px;
+    background-color: var(--soft-white);
+    border: 2px solid black;
+    text-align: center;
+  }
+  
+  #user-options {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 10px 20px 10px 20px;
   }
 }
